--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -7,12 +7,13 @@
     <link rel="icon" href="./favicon.png" />
     <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
+
+
   <body>
     <div class="page">
       <partial src="_header.html" label="Header"></partial>
-      
       <partial src="_main.html" label="Main"></partial>
-     
+      <partial src="_footer.html" label="Footer"></partial>
     </div>
   </body>
 </html>
