--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,6 +1,6 @@
 <header class="page__header">
     <div class="btnBurguer_container">
-        <button class="btnBurguer"> <a href="#web adalab"></a> 
+        <button class="btnBurguer"> <img src="../../assets/images/ico-menu.svg" alt=""> <a href="#web adalab"></a> 
         </button>
     </div>
 
