--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,3 +1,31 @@
 @import url(reset/normalize.css);
 
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.page__header {
+  height: 100vh;
+  width: 100vw;
+  background: url(/assets/images/cover.jpg) no-repeat;
+  background-position: top;
+  background-size: cover;
+}
+
+.btn_burguer_container {
+  width: 44px;
+  height: 44px;
+  background-color: #0271bc;
+  position: fixed;
+}
+
+.btn_burguer_containerbtnBurguer {
+  padding-left: 16px;
+  height: 14px;
+  position: fixed;
+}
+
 /*# sourceMappingURL=main.css.map */
