--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Anonymous Proxy</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:400,500&display=swap" rel="stylesheet">
     <link rel="icon" href="./favicon.png" />
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <title>Anonymous Proxy</title>
   </head>
 
 
