--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,18 +1,16 @@
-<header class="page__header">
+<div class="page__header">
     <div class="btnBurguer_container">
-        <button class="btnBurguer"> <img src="../../assets/images/ico-menu.svg" alt=""> <a href="#web adalab"></a> 
-        </button>
+        <a class="btnBurguer" href="#webAdalab" alt="Enlace a Adalab"> <img src="../../assets/images/ico-menu.svg"
+                alt="Menu"> </a>
     </div>
 
 
     <div class="header_text_container">
-        <h1>anonymous proxy</h1>
-        <p>in hac habitasse platea dictumst</p>
+        <h1>anonymous <br>proxy</h1>
+        <p>In hac habitasse platea dictumst</p>
+        <a href="#down"><img src="../../assets/images/ico-scroll-down.svg" alt="Scroll hacia el final de la página"></a>
+
     </div>
+</div>
 
-    <div class="down_container">
-        <a href="#down"><img src="../../assets/images/ico-scroll-down.svg" alt="Scroll hacia el final de la página"> </a>
-    </div>
-
-
-</header>
+</div>
