--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -13,19 +13,50 @@
   background: url(/assets/images/cover.jpg) no-repeat;
   background-position: top;
   background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.btn_burguer_container {
+.btnBurguer_container {
+  position: fixed;
+  background-color: #0271bc;
   width: 44px;
   height: 44px;
-  background-color: #0271bc;
-  position: fixed;
+  padding-left: 14px;
+  padding-right: 14px;
+  padding-bottom: 15px;
+  padding-top: 15px;
 }
 
-.btn_burguer_containerbtnBurguer {
-  padding-left: 16px;
+.btnBurguer_container btn_burguer {
+  width: 16px;
   height: 14px;
-  position: fixed;
+}
+
+.header_text_container {
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.header_text_container h1 {
+  color: #ffffff;
+  font-family: "Roboto Slab", bold;
+  text-transform: uppercase;
+  font-size: 42px;
+  line-height: 55px;
+}
+
+.header_text_container p {
+  color: #ffffff;
+  font-family: "Roboto", regular;
+  font-size: 16px;
 }
 
 /*# sourceMappingURL=main.css.map */
