--- a/_src/assets/scss/layouts/_header.scss
+++ b/_src/assets/scss/layouts/_header.scss
@@ -4,18 +4,53 @@
     background: url(/assets/images/cover.jpg) no-repeat;
     background-position: top;
     background-size: cover;
-
+    display: flex;
+    
 }
 
-.btn_burguer_container {
+.btnBurguer_container {
+    position: fixed;
+    background-color: $colorMidBlue;
     width: 44px;
     height: 44px;
-    background-color: $colorMidBlue;
-    position: fixed;
+    padding-left: 14px;
+    padding-right: 14px;
+    padding-bottom: 15px;
+    padding-top: 15px;
 
-    &btnBurguer {
-        padding-left: 16px;
+
+    & btn_burguer {
+        width: 16px;
         height: 14px;
-        position:fixed;
+        
     }
+}
+
+.header_text_container {
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        
+        
+        
+    & h1{
+        color:$colorText1;
+        font-family:$fontStyle1;
+        text-transform: uppercase;
+        font-size: 42px;
+        line-height: 55px;
+       
+       
+        
+    }
+
+    & p {
+        color:$colorText1;
+        font-family:$fontStyle2;
+        font-size: 16px;
+        
+       
+
+    }
+
 }
