--- a/_src/assets/scss/utils/_variables.scss
+++ b/_src/assets/scss/utils/_variables.scss
@@ -11,6 +11,6 @@ $colorText3:$colorLightBlue;
 $colorText4:$colorGrey;
 
 
-$fontStyle1:'Roboto Slab', bold;
-$fontStyle2:'Roboto', regular;
+$fontStyle1:'Roboto Slab', ;
+$fontStyle2:'Roboto', ;
 $fontStyle3:'Roboto', medium ;
