--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,12 +1,12 @@
 <main class="page__main">
 
     <section class="section1">
-        <h4>insomnia tips</h3>
-            <h2>looking through a window</h2>
-            <p>donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus.
-                vivamus semper sodales rutrum.</p>
+        <h2>insomnia tips</h2>
+        <h3>looking through a window</h3>
+        <p>donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. vivamus
+            semper sodales rutrum.</p>
 
-            <a class="go_link" href="#go">go</a>
+        <a class="go_link" href="#go">go</a>
 
 
     </section>
@@ -14,25 +14,25 @@
 
     <section class="section2">
         <div class="section2_title_container">
-            <h2>3 reasons to purchase</h2>
+            <h3>3 reasons to purchase</h3>
         </div>
 
         <article class="articles_container">
 
             <div class="articles article1">
-                <h3>ut sed metus</h3>
+                <h4>ut sed metus</h4>
                 <p>lorem ipsum dolor sit amet, consecteur.</p>
             </div>
 
             <div class="articles article2">
-                <h3>curabitur ac erat</h3>
+                <h4>curabitur ac erat</h4>
                 <p>mauris mattis urna quis lorem molestie.</p>
 
             </div>
 
 
             <div class="articles article3">
-                <h3>morbi dictum</h3>
+                <h4>morbi dictum</h4>
                 <p>aliquam in dolor et dolor tincidunt</p>
 
             </div>
@@ -42,13 +42,14 @@
             </div>
 
             <div>
-               <a class="link_up" href="#up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba"> </a>
+                <a class="link_up" href="#up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
+                </a>
             </div>
 
         </article>
 
-        
-     
+
+
 
     </section>
 
