--- a/_src/assets/scss/layouts/_header.scss
+++ b/_src/assets/scss/layouts/_header.scss
@@ -5,7 +5,7 @@
     background-position: top;
     background-size: cover;
     display: flex;
-    
+
 }
 
 .btnBurguer_container {
@@ -22,35 +22,57 @@
     & btn_burguer {
         width: 16px;
         height: 14px;
-        
+
     }
 }
 
 .header_text_container {
-        width: 100vw;
-        display: flex;
-        flex-direction: column;
-        
-        
-        
-    & h1{
-        color:$colorText1;
-        font-family:$fontStyle1;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+
+    & h1 {
+        color: $colorText1;
+        font-family: $fontStyle1;
         text-transform: uppercase;
         font-size: 42px;
         line-height: 55px;
-       
-       
-        
+        text-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
+        font-weight: bold;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.31;
+        letter-spacing: normal;
+        text-align: center;
+        padding-top: 284px;
+
     }
 
     & p {
-        color:$colorText1;
-        font-family:$fontStyle2;
+        color: $colorText1;
+        font-family: $fontStyle2;
         font-size: 16px;
-        
-       
+        position: relative;
+        padding-top: 10px;
 
     }
+
+    & .btn_down {
+        position: relative;
+        width: 45px;
+        height: 45px;
+        background-color: $colorWhite;
+        border-radius: 50%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 45px;
+
+        & img {}
+
+
+    }
+
 
 }
