--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -14,7 +14,8 @@
   <body>
     <div class="page">
       <partial src="_header.html" label="Header"></partial>
-      <partial src="_main.html" label="Main"></partial>
+      <partial src="_section1.html" label="Section 1"></partial>
+      <partial src="_section2.html" label="Section 2"></partial>
       <partial src="_footer.html" label="Footer"></partial>
     </div>
   </body>
