--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -4,6 +4,7 @@
 @import 'base/typography';
 @import 'layouts/structure';
 @import 'layouts/header';
-@import 'layouts/main';
+@import 'layouts/section1';
+@import 'layouts/section2';
 @import 'layouts/footer';
 @import 'components/buttons';
