section2 in progress

--- a/_src/assets/scss/utils/_variables.scss
+++ b/_src/assets/scss/utils/_variables.scss
@@ -1,6 +1,7 @@
 $colorDarkBlue:#304268;
 $colorMidBlue:#0271bc;
 $colorLightBlue:#8ccbea;
+$colorBackBlue: #eff9ff;
 $colorWhite:#ffffff;
 $colorOrange:#f26002;
 $colorGrey: #4a4a4a;
