--- a/_src/assets/scss/utils/_variables.scss
+++ b/_src/assets/scss/utils/_variables.scss
@@ -15,3 +15,6 @@ $colorText4:$colorGrey;
 $fontStyle1:'Roboto Slab', ;
 $fontStyle2:'Roboto', ;
 $fontStyle3:'Roboto', medium ;
+
+/* $forPc:
+$forTablet: */
