--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,5 +1,11 @@
 <footer class="page__footer">
 
+    <div>
+        <a class="link_up" href="#up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
+        </a>
+    </div>
+   
+   
     <nav class="menu_container">
         <ul>
             <li>articles</li>
