--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -8,7 +8,8 @@
     <div class="header_text_container">
         <h1>anonymous <br>proxy</h1>
         <p>In hac habitasse platea dictumst</p>
-        <a class="btn_down" href="#down" title="Scroll hacia el final de la página"><img src="../../assets/images/ico-scroll-down.svg" alt="Scroll hacia el final de la página"></a>
+        <a class="btn_down" href="#down" title="Scroll hacia el final de la página"><img
+                src="../../assets/images/ico-scroll-down.svg" alt="Scroll hacia el final de la página"></a>
 
     </div>
 </div>
