--- a/_src/templates/partials/_section2.html
+++ b/_src/templates/partials/_section2.html
@@ -5,25 +5,25 @@
 
     <article class="articles_container">
 
-        <div class="articles article1">
+        <div class="item1">
             <h4>ut sed metus</h4>
             <p>lorem ipsum dolor sit amet, consecteur.</p>
         </div>
 
-        <div class="articles article2">
+        <div class="item2">
             <h4>curabitur ac erat</h4>
             <p>mauris mattis urna quis lorem molestie.</p>
 
         </div>
 
 
-        <div class="articles article3">
+        <div class="item3">
             <h4>morbi dictum</h4>
             <p>aliquam in dolor et dolor tincidunt</p>
 
         </div>
 
-        <div>
+        <div class="item4">
             <a class="link_more" href="#web adalab" title="More reasons">more reasons</a>
         </div>
 
