--- a/_src/assets/scss/layouts/_section2.scss
+++ b/_src/assets/scss/layouts/_section2.scss
@@ -1,49 +1,206 @@
 .section2 {
-
     padding-left: 15px;
     padding-right: 15px;
+    width: 100vw;
     height: 624px;
     background-color: $colorBackBlue;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+   
+
 
 
     & .section2_title_container {
-
+        padding-top: 30px;
         font-family: $fontStyle1;
         color: $colorText2;
-        font-size: 24px;
+        font-size: 20px;
         font-weight: bold;
         font-stretch: normal;
         font-style: normal;
         line-height: 1.25;
         letter-spacing: normal;
         text-align: center;
-        padding-top: 30px;
         text-transform: capitalize;
     }
 
 
     & .articles_container {
 
-        & .articles {
-            padding-top: 45px;
-            padding-bottom: 45px;
+        display: grid;
+        grid-template-columns: 20% 20% 20% 20% 20%;
+        grid-template-rows: 138px 138px 138px 45px 45px 60px;
+
+
+        & .item1 {
+          padding-top: 45px;
             text-align: center;
+            grid-column: 2/5;
+            grid-row: 1/2;
+
+            & h4 {
+
+                font-family: $fontStyle1;
+                font-size: 18px;
+                font-weight: bold;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: 1.67;
+                letter-spacing: normal;
+                text-align: center;
+
+                &:first-letter {
+                    text-transform: capitalize;
+                }
+
+            }
+
+
+            & p {
+
+                font-family: $fontStyle2;
+                font-size: 18px;
+                font-weight: normal;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: 1.67;
+                letter-spacing: normal;
+                text-align: center;
+
+                &:first-letter {
+                    text-transform: capitalize;
+                }
+
+            }
+
+        }
+
+
+        & .item2 {
+            padding-top: 45px;
+            text-align: center;
+            grid-column: 2/5;
+            grid-row: 2/3;
+
+            & h4 {
+
+                font-family: $fontStyle1;
+                font-size: 18px;
+                font-weight: bold;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: 1.67;
+                letter-spacing: normal;
+                text-align: center;
+
+                &:first-letter {
+                    text-transform: capitalize;
+                }
+
+            }
+
+
+            & p {
+
+                font-family: $fontStyle2;
+                font-size: 18px;
+                font-weight: normal;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: 1.67;
+                letter-spacing: normal;
+                text-align: center;
+
+                &:first-letter {
+                    text-transform: capitalize;
+                }
+
+            }
+
+
+        }
+
+
+
+        & .item3 {
+            padding-top: 45px;
+            text-align: center;
+            grid-column: 2/5;
+            grid-row: 3/4;
 
 
             & h4 {
-                padding-right:68px;
-                padding-left:68px;
+
+                font-family: $fontStyle1;
+                font-size: 18px;
+                font-weight: bold;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: 1.67;
+                letter-spacing: normal;
+                text-align: center;
+
+                &:first-letter {
+                    text-transform: capitalize;
+                }
+
             }
 
+
             & p {
-                padding-right: 70px;
-                padding-left: 70px;
+
+                font-family: $fontStyle2;
+                font-size: 18px;
+                font-weight: normal;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: 1.67;
+                letter-spacing: normal;
+                text-align: center;
+
+                &:first-letter {
+                    text-transform: capitalize;
+                }
+
             }
+
+        }
+
+
+        & .item4 {
+            width: 184px;
+            height: 45px;
+            text-align: center;
+            grid-column: 2/5;
+            grid-row: 5/6;
+            background-color: $colorOrange;
+            border-radius: 22.5px;
+            
+
+            &:first-letter {
+                text-transform: capitalize;
+            }
+
+            & a {
+                
+                text-decoration: none;
+                color: $colorText1;
+                font-family: $fontStyle2;
+                font-size: 20px;
+                font-weight: 500;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: 2.25;
+                letter-spacing: normal;
+                padding: 10px;
+
+            }
+
+
+
+
         }
 
     }
+
+
 
 }
