--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,10 +1,8 @@
 <footer class="page__footer">
 
-    <div>
-        <a class="link_up" href="#up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
+        <a class="btn_up" href="#up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
         </a>
-    </div>
-   
+    
    
     <nav class="menu_container">
         <ul>
@@ -33,7 +31,7 @@
         </div>
 
         <div>
-            <p>we &#10084; components</p>
+            <p>we <span style="color: #f26002;">&#10084;</span> components</p>
         </div>
     </div>
 
