--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -335,4 +335,78 @@ $forTablet: */* {
   padding: 10px;
 }
 
+.page__footer {
+  height: 465px;
+  background-color: #304268;
+  color: #ffffff;
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  text-align: center;
+}
+
+.page__footer .btn_up {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  top: -22.5px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.page__footer .menu_container {
+  padding-top: 20px;
+  text-transform: uppercase;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.88;
+  letter-spacing: normal;
+  text-align: center;
+}
+
+.page__footer .rrss_container {
+  padding-top: 30px;
+  text-transform: uppercase;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.88;
+  letter-spacing: normal;
+  text-align: center;
+}
+
+.page__footer .copyright_container {
+  padding-top: 30px;
+  text-transform: lowercase;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.88;
+  letter-spacing: normal;
+  text-align: center;
+}
+
 /*# sourceMappingURL=main.css.map */
