--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -3,7 +3,7 @@
 @import 'utils/mixins';
 @import 'base/typography';
 @import 'layouts/structure';
-@import 'layouts/header';
+@import 'layouts/hero';
 @import 'layouts/section1';
 @import 'layouts/section2';
 @import 'layouts/footer';
