--- a/_src/assets/scss/utils/_variables.scss
+++ b/_src/assets/scss/utils/_variables.scss
@@ -16,5 +16,5 @@ $fontStyle1:'Roboto Slab', ;
 $fontStyle2:'Roboto', ;
 $fontStyle3:'Roboto', medium ;
 
-/* $forPc:
-$forTablet: */
+$tablet:768px;
+$pc: 1280px;
