--- a/_src/templates/partials/_section1.html
+++ b/_src/templates/partials/_section1.html
@@ -5,7 +5,7 @@
     <p>donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. vivamus
         semper sodales rutrum.</p>
 
-    <a class="go_link" href="#go">go</a>
+    <a class="go_link" href="https://adalab.es/" target="_blank" title="Adalab" alt="Enlace a Adalab">go</a>
 
 
 </section>
