--- a/_src/templates/partials/_section2.html
+++ b/_src/templates/partials/_section2.html
@@ -1,4 +1,4 @@
-<section class="section2">
+<section class="section2" id="section2_start">
     <div class="section2_title_container">
         <h3>3 reasons to purchase</h3>
     </div>
@@ -24,7 +24,7 @@
         </div>
 
         <div class="item4">
-            <a class="link_more" href="#web adalab" title="More reasons">more reasons</a>
+            <a class="link_more" href="https://adalab.es/" target="_blank" title="Adalab" alt="Enlace a Adalab">more reasons</a>
         </div>
 
        
