--- a/_src/assets/scss/layouts/_hero.scss
+++ b/_src/assets/scss/layouts/_hero.scss
@@ -1,10 +1,16 @@
-.page__header {
+.page__hero {
     height: 100vh;
     width: 100vw;
     background: url(/assets/images/cover.jpg) no-repeat;
     background-position: top;
     background-size: cover;
+    background-blend-mode: multiply;
     display: flex;
+
+    @include forTablet {
+        height: 768px;
+    }
+
 
 }
 
@@ -27,7 +33,7 @@
     }
 }
 
-.header_text_container {
+.hero_text_container {
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -48,6 +54,18 @@
         letter-spacing: normal;
         text-align: center;
         padding-top: 284px;
+
+        @include forTablet {
+            padding-top: 384px;
+            font-size: 80px;
+            line-height: 1.33;
+        }
+
+        @include forPc {
+            font-size: 100px;
+            line-height: 1.32;
+        }
+
     }
 
     & p {
@@ -56,6 +74,15 @@
         font-size: 16px;
         position: relative;
         padding-top: 10px;
+
+        @include forTablet {
+            padding-top: 20px;
+            font-size: 24px;
+        }
+
+        @include forPc {
+            padding-top: 0px;
+        }
     }
 
     & .btn_down {
@@ -70,6 +97,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
+
+        @include forTablet {
+            margin-top: 30px;
+        }
+
 
     }
 
