--- a/_src/assets/scss/layouts/_section2.scss
+++ b/_src/assets/scss/layouts/_section2.scss
@@ -1,10 +1,8 @@
 .section2 {
-    padding-left: 15px;
-    padding-right: 15px;
     width: 100vw;
     height: 624px;
     background-color: $colorBackBlue;
-   
+
 
 
 
@@ -26,13 +24,12 @@
     & .articles_container {
 
         display: grid;
-        grid-template-columns: 20% 20% 20% 20% 20%;
+        grid-template-columns: 68px 51px auto 51px 68px;
         grid-template-rows: 138px 138px 138px 45px 45px 60px;
 
 
         & .item1 {
-          padding-top: 45px;
-            text-align: center;
+            padding-top: 45px;
             grid-column: 2/5;
             grid-row: 1/2;
 
@@ -173,14 +170,14 @@
             grid-row: 5/6;
             background-color: $colorOrange;
             border-radius: 22.5px;
-            
+
 
             &:first-letter {
                 text-transform: capitalize;
             }
 
             & a {
-                
+
                 text-decoration: none;
                 color: $colorText1;
                 font-family: $fontStyle2;
