--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,24 +1,38 @@
 <footer class="page__footer">
 
-        <a class="btn_up" href="#up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
-        </a>
-    
-   
+    <a class="btn_up" href="#hero" title="Up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
+    </a>
+
+
     <nav class="menu_container">
         <ul>
-            <li>articles</li>
-            <li>books</li>
-            <li>events</li>
-            <li>reasons</li>
-            <li>tips</li>
+            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                    alt="Enlace a Adalab">articles</li>
+
+            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                    alt="Enlace a Adalab">books</li>
+
+            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                    alt="Enlace a Adalab">events</li>
+
+            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                    alt="Enlace a Adalab">reasons</li>
+
+            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                    alt="Enlace a Adalab">tips</li>
         </ul>
     </nav>
 
     <nav class="rrss_container">
         <ul>
-            <li>twitter</li>
-            <li>instagram</li>
-            <li>mastodon.social</li>
+            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                    alt="Enlace a Adalab">twitter</li>
+
+            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                    alt="Enlace a Adalab">instagram</li>
+
+            <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
+                    alt="Enlace a Adalab">mastodon.social</li>
 
         </ul>
     </nav>
