--- a/_src/assets/scss/layouts/_section2.scss
+++ b/_src/assets/scss/layouts/_section2.scss
@@ -3,6 +3,18 @@
     height: 624px;
     background-color: $colorBackBlue;
 
+    @include forTablet {
+        height: 397px;
+        padding-right: 40px;
+        padding-left: 35.7px;
+    }
+
+    @include forPc {
+        height: 427px;
+        padding-right: 0px;
+        padding-left: 0px;
+
+    }
 
 
 
@@ -18,20 +30,57 @@
         letter-spacing: normal;
         text-align: center;
         text-transform: capitalize;
+
+        @include forTablet {
+            font-size: 26px;
+        }
+
+        @include forPc {
+            padding-top: 60px;
+            font-size: 32px;
+        }
+    
+
     }
 
 
     & .articles_container {
 
         display: grid;
-        grid-template-columns: 68px 51px auto 51px 68px;
-        grid-template-rows: 138px 138px 138px 45px 45px 60px;
+        grid-template-columns: 70px 180px 70px;
+        grid-template-rows: 45px 93px 45px 93px 45px 93px 45px 45px 60px;
+
+
+        @include forTablet {
+            display: grid;
+            grid-template-columns: 212.3px 27.7px 212.3px 27.7px 212.3px;
+            grid-template-rows: 45px 112px 60px 45px 60px;
+        }
+
+
+        @include forPc {
+            display: grid;
+            grid-template-columns: 81.2px 353.8px 26.2px 353.8px 26.2px 353.8px 85px;
+            grid-template-rows: 45px 112px 60px 45px 60px;
+        
+        }
+    
 
 
         & .item1 {
             padding-top: 45px;
-            grid-column: 2/5;
+            grid-column: 2/3;
             grid-row: 1/2;
+
+            @include forTablet {
+                grid-column: 1/2;
+                grid-row: 1/2;
+            }
+
+            @include forPc {
+                grid-column: 2/3;
+                grid-row: 1/2;
+            }
 
             & h4 {
 
@@ -46,6 +95,10 @@
 
                 &:first-letter {
                     text-transform: capitalize;
+                }
+
+                @include forTablet {
+                    font-size: 24px;
                 }
 
             }
@@ -64,6 +117,12 @@
 
                 &:first-letter {
                     text-transform: capitalize;
+                }
+
+                @include forTablet {
+                    font-size: 20px;
+                    line-height: 1.5;
+                    padding-top: 14px;
                 }
 
             }
@@ -74,8 +133,20 @@
         & .item2 {
             padding-top: 45px;
             text-align: center;
-            grid-column: 2/5;
-            grid-row: 2/3;
+            grid-column: 2/3;
+            grid-row: 3/4;
+
+            @include forTablet {
+                grid-column: 3/4;
+                grid-row: 1/2;
+            }
+
+            @include forPc{
+                grid-column: 4/5;
+                grid-row: 1/2;
+
+            }
+
 
             & h4 {
 
@@ -90,6 +161,10 @@
 
                 &:first-letter {
                     text-transform: capitalize;
+                }
+
+                @include forTablet {
+                    font-size: 24px;
                 }
 
             }
@@ -108,6 +183,13 @@
 
                 &:first-letter {
                     text-transform: capitalize;
+                }
+
+                @include forTablet {
+                    font-size: 20px;
+                    line-height: 1.5;
+                    padding-top: 14px;
+                    align-items: stretch;
                 }
 
             }
@@ -120,8 +202,19 @@
         & .item3 {
             padding-top: 45px;
             text-align: center;
-            grid-column: 2/5;
-            grid-row: 3/4;
+            grid-column: 2/3;
+            grid-row: 5/6;
+
+            @include forTablet {
+                grid-column: 5/6;
+                grid-row: 1/2;
+            }
+
+            @include forPc{
+                grid-column: 6/7;
+                grid-row: 1/2;
+
+            }
 
 
             & h4 {
@@ -137,6 +230,10 @@
 
                 &:first-letter {
                     text-transform: capitalize;
+                }
+
+                @include forTablet {
+                    font-size: 24px;
                 }
 
             }
@@ -157,6 +254,12 @@
                     text-transform: capitalize;
                 }
 
+                @include forTablet {
+                    font-size: 20px;
+                    line-height: 1.5;
+                    padding-top: 14px;
+                }
+
             }
 
         }
@@ -166,15 +269,24 @@
             width: 184px;
             height: 45px;
             text-align: center;
-            grid-column: 2/5;
-            grid-row: 5/6;
+            grid-column: 2/3;
+            grid-row: 8/9;
             background-color: $colorOrange;
             border-radius: 22.5px;
 
-
-            &:first-letter {
-                text-transform: capitalize;
+            @include forTablet {
+                width: 210px;
             }
+
+            @include forPc{
+                width: 255px;
+                display: grid;
+                grid-column: 4/5;
+                grid-row: 4/5;
+            }
+
+
+            
 
             & a {
 
@@ -188,6 +300,11 @@
                 line-height: 2.25;
                 letter-spacing: normal;
                 padding: 10px;
+
+
+                &:first-letter {
+                text-transform: capitalize;
+            }
 
             }
 
