--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -193,13 +193,13 @@
 
 .section2 .articles_container {
   display: grid;
-  grid-template-columns: 68px 51px auto 51px 68px;
-  grid-template-rows: 138px 138px 138px 45px 45px 60px;
+  grid-template-columns: 70px 180px 70px;
+  grid-template-rows: 45px 93px 45px 93px 45px 93px 45px 45px 60px;
 }
 
 .section2 .articles_container .item1 {
   padding-top: 45px;
-  grid-column: 2/5;
+  grid-column: 2/3;
   grid-row: 1/2;
 }
 
@@ -236,8 +236,8 @@
 .section2 .articles_container .item2 {
   padding-top: 45px;
   text-align: center;
-  grid-column: 2/5;
-  grid-row: 2/3;
+  grid-column: 2/3;
+  grid-row: 3/4;
 }
 
 .section2 .articles_container .item2 h4 {
@@ -273,8 +273,8 @@
 .section2 .articles_container .item3 {
   padding-top: 45px;
   text-align: center;
-  grid-column: 2/5;
-  grid-row: 3/4;
+  grid-column: 2/3;
+  grid-row: 5/6;
 }
 
 .section2 .articles_container .item3 h4 {
@@ -311,14 +311,10 @@
   width: 184px;
   height: 45px;
   text-align: center;
-  grid-column: 2/5;
-  grid-row: 5/6;
+  grid-column: 2/3;
+  grid-row: 8/9;
   background-color: #f26002;
   border-radius: 22.5px;
-}
-
-.section2 .articles_container .item4:first-letter {
-  text-transform: capitalize;
 }
 
 .section2 .articles_container .item4 a {
@@ -332,6 +328,10 @@
   line-height: 2.25;
   letter-spacing: normal;
   padding: 10px;
+}
+
+.section2 .articles_container .item4 a:first-letter {
+  text-transform: capitalize;
 }
 
 .page__footer {
@@ -443,6 +443,74 @@
   .section1 a {
     width: 91px;
   }
+
+  .section2 {
+    height: 397px;
+    padding-right: 40px;
+    padding-left: 35.7px;
+  }
+
+  .section2 .section2_title_container {
+    font-size: 26px;
+  }
+
+  .section2 .articles_container {
+    display: grid;
+    grid-template-columns: 212.3px 27.7px 212.3px 27.7px 212.3px;
+    grid-template-rows: 45px 112px 60px 45px 60px;
+  }
+
+  .section2 .articles_container .item1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .section2 .articles_container .item1 h4 {
+    font-size: 24px;
+  }
+
+  .section2 .articles_container .item1 p {
+    font-size: 20px;
+    line-height: 1.5;
+    padding-top: 14px;
+  }
+
+  .section2 .articles_container .item2 {
+    grid-column: 3/4;
+    grid-row: 1/2;
+  }
+
+  .section2 .articles_container .item2 h4 {
+    font-size: 24px;
+  }
+
+  .section2 .articles_container .item2 p {
+    font-size: 20px;
+    line-height: 1.5;
+    padding-top: 14px;
+    -webkit-box-align: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+  }
+
+  .section2 .articles_container .item3 {
+    grid-column: 5/6;
+    grid-row: 1/2;
+  }
+
+  .section2 .articles_container .item3 h4 {
+    font-size: 24px;
+  }
+
+  .section2 .articles_container .item3 p {
+    font-size: 20px;
+    line-height: 1.5;
+    padding-top: 14px;
+  }
+
+  .section2 .articles_container .item4 {
+    width: 210px;
+  }
 }
 
 @media all and (min-width: 1280px) {
@@ -472,6 +540,45 @@
 
   .section1 a {
     width: 160px;
+  }
+
+  .section2 {
+    height: 427px;
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+
+  .section2 .section2_title_container {
+    padding-top: 60px;
+    font-size: 32px;
+  }
+
+  .section2 .articles_container {
+    display: grid;
+    grid-template-columns: 81.2px 353.8px 26.2px 353.8px 26.2px 353.8px 85px;
+    grid-template-rows: 45px 112px 60px 45px 60px;
+  }
+
+  .section2 .articles_container .item1 {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+
+  .section2 .articles_container .item2 {
+    grid-column: 4/5;
+    grid-row: 1/2;
+  }
+
+  .section2 .articles_container .item3 {
+    grid-column: 6/7;
+    grid-row: 1/2;
+  }
+
+  .section2 .articles_container .item4 {
+    width: 255px;
+    display: grid;
+    grid-column: 4/5;
+    grid-row: 4/5;
   }
 }
 
