--- a/_src/assets/scss/layouts/_section2.scss
+++ b/_src/assets/scss/layouts/_section2.scss
@@ -5,8 +5,8 @@
 
     @include forTablet {
         height: 397px;
-        padding-right: 40px;
-        padding-left: 35.7px;
+        padding-right: 0px;
+        padding-left: 0px;
     }
 
     @include forPc {
@@ -53,7 +53,7 @@
 
         @include forTablet {
             display: grid;
-            grid-template-columns: 212.3px 27.7px 212.3px 27.7px 212.3px;
+            grid-template-columns: 35.7px 212.3px 27.7px 212.3px  27.7px 212.3px 40px;
             grid-template-rows: 45px 112px 60px 45px 60px;
         }
 
