--- a/_src/assets/scss/layouts/_section2.scss
+++ b/_src/assets/scss/layouts/_section2.scss
@@ -73,7 +73,7 @@
             grid-row: 1/2;
 
             @include forTablet {
-                grid-column: 1/2;
+                grid-column: 2/3;
                 grid-row: 1/2;
             }
 
@@ -137,7 +137,7 @@
             grid-row: 3/4;
 
             @include forTablet {
-                grid-column: 3/4;
+                grid-column: 4/4;
                 grid-row: 1/2;
             }
 
@@ -206,7 +206,7 @@
             grid-row: 5/6;
 
             @include forTablet {
-                grid-column: 5/6;
+                grid-column: 6/7;
                 grid-row: 1/2;
             }
 
@@ -276,6 +276,9 @@
 
             @include forTablet {
                 width: 210px;
+                grid-column: 4/4;
+                grid-row: 4/5;
+                
             }
 
             @include forPc{
