--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -461,7 +461,7 @@
   }
 
   .section2 .articles_container .item1 {
-    grid-column: 1/2;
+    grid-column: 2/3;
     grid-row: 1/2;
   }
 
@@ -476,7 +476,7 @@
   }
 
   .section2 .articles_container .item2 {
-    grid-column: 3/4;
+    grid-column: 4/4;
     grid-row: 1/2;
   }
 
@@ -494,7 +494,7 @@
   }
 
   .section2 .articles_container .item3 {
-    grid-column: 5/6;
+    grid-column: 6/7;
     grid-row: 1/2;
   }
 
@@ -510,6 +510,8 @@
 
   .section2 .articles_container .item4 {
     width: 210px;
+    grid-column: 4/4;
+    grid-row: 4/5;
   }
 }
 
