--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -512,6 +512,7 @@
     width: 210px;
     grid-column: 4/4;
     grid-row: 4/5;
+    justify-self: center;
   }
 }
 
@@ -567,7 +568,7 @@
   }
 
   .section2 .articles_container .item2 {
-    grid-column: 4/5;
+    grid-column: 4/4;
     grid-row: 1/2;
   }
 
@@ -579,8 +580,13 @@
   .section2 .articles_container .item4 {
     width: 255px;
     display: grid;
-    grid-column: 4/5;
+    grid-column: 4/4;
     grid-row: 4/5;
+    justify-self: center;
+  }
+
+  .section2 .articles_container .item4 a {
+    padding: 0px;
   }
 }
 
