--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -195,6 +195,9 @@
   display: grid;
   grid-template-columns: 70px 180px 70px;
   grid-template-rows: 45px 93px 45px 93px 45px 93px 45px 45px 60px;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .section2 .articles_container .item1 {
@@ -339,6 +342,23 @@
   background-color: #304268;
   color: #ffffff;
   width: 100vw;
+}
+
+.page__footer .btn_up {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  top: -22.5px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  display: block;
+  text-align: center;
+  padding-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.page__footer .footer_links_container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -349,35 +369,19 @@
   text-align: center;
 }
 
-.page__footer .btn_up {
-  position: relative;
-  width: 45px;
-  height: 45px;
-  top: -22.5px;
-  background-color: #ffffff;
-  border-radius: 50%;
-  margin-left: auto;
-  margin-right: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+.page__footer .footer_links_container li {
+  list-style-type: none;
 }
 
-.page__footer .menu_container {
+.page__footer .footer_links_container .menu_container {
   padding-top: 20px;
 }
 
-.page__footer .rrss_container {
+.page__footer .footer_links_container .rrss_container {
   padding-top: 30px;
 }
 
-.page__footer .copyright_container {
+.page__footer .footer_links_container .copyright_container {
   padding-top: 30px;
   text-transform: lowercase;
   font-family: "Roboto";
@@ -390,7 +394,7 @@
   text-align: center;
 }
 
-.page__footer .footer_links {
+.page__footer .footer_links_container .footer_links {
   text-decoration: none;
   color: #ffffff;
   text-transform: uppercase;
@@ -513,6 +517,23 @@
     grid-column: 4/4;
     grid-row: 4/5;
     justify-self: center;
+  }
+
+  .page__footer {
+    height: 240px;
+  }
+
+  .page__footer .footer_links_container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    text-decoration: none;
   }
 }
 
