web responsive done

--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -3,37 +3,37 @@
     <a class="btn_up" href="#hero" title="Up"> <img src="../../assets/images/ico-arrow.svg" alt="Scroll hacia arriba">
     </a>
 
-    <div class="footer_links_container">
+    <div class="footer_info_container">
 
         <nav class="menu_container">
             <ul>
                 <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                        alt="Enlace a Adalab">articles</li>
+                        alt="Enlace a Adalab">articles</a></li>
 
                 <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                        alt="Enlace a Adalab">books</li>
+                        alt="Enlace a Adalab">books</a></li>
 
                 <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                        alt="Enlace a Adalab">events</li>
+                        alt="Enlace a Adalab">events</a></li>
 
                 <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                        alt="Enlace a Adalab">reasons</li>
+                        alt="Enlace a Adalab">reasons</a></li>
 
                 <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                        alt="Enlace a Adalab">tips</li>
+                        alt="Enlace a Adalab">tips</a></li>
             </ul>
         </nav>
 
         <nav class="rrss_container">
             <ul>
                 <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                        alt="Enlace a Adalab">twitter</li>
+                        alt="Enlace a Adalab">twitter</a></li>
 
                 <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                        alt="Enlace a Adalab">instagram</li>
+                        alt="Enlace a Adalab">instagram</a></li>
 
                 <li><a class="footer_links" href="https://adalab.es/" target="_blank" title="Adalab"
-                        alt="Enlace a Adalab">mastodon.social</li>
+                        alt="Enlace a Adalab">mastodon.social</a></li>
 
             </ul>
         </nav>
@@ -41,13 +41,10 @@
 
         <div class="copyright_container">
 
-            <div>
-                <p>&copy;2017</p>
-            </div>
+            <p>&copy;2017</p>
 
-            <div>
-                <p>we <span style="color: #f26002;">&#10084;</span> components</p>
-            </div>
+            <p>we <span style="color: #f26002;">&#10084;</span> components</p>
+
         </div>
 
     </div>
