--- a/_src/assets/scss/layouts/_footer.scss
+++ b/_src/assets/scss/layouts/_footer.scss
@@ -3,11 +3,10 @@
     background-color: $colorDarkBlue;
     color: $colorText1;
     width: 100vw;
-   
+
 
     @include forTablet {
         height: 240px;
-       
     }
 
 
@@ -23,58 +22,52 @@
         padding-top: 10px;
         margin-left: auto;
         margin-right: auto;
-        
-
-        @include forTablet {
-            
-        }
-
     }
 
 
 
-    .footer_links_container {
+    & .footer_info_container {
         display: flex;
         flex-direction: column;
         text-align: center;
 
-        & li {
-            list-style-type: none;
-        }
-        
 
-        @include forTablet{
+        @include forTablet {
             display: flex;
             flex-direction: row;
-            justify-content: space-around;
-            text-decoration: none;
+
+        }
+
+        @include forPc {
+            justify-content: center;
         }
 
 
 
         & .menu_container {
             padding-top: 20px;
-            
+
+
+            @include forTablet {
+                padding-top: 0px;
+                order: 2;
+                text-align: left;
+                margin-left: 30px;
+                width: 210px;
+            }
 
         }
 
         & .rrss_container {
             padding-top: 30px;
 
-        }
-
-        & .copyright_container {
-            padding-top: 30px;
-            text-transform: lowercase;
-            font-family: $fontStyle2;
-            font-size: 16px;
-            font-weight: normal;
-            font-stretch: normal;
-            font-style: normal;
-            line-height: 1.88;
-            letter-spacing: normal;
-            text-align: center;
-
+            @include forTablet {
+                padding-top: 0px;
+                order: 3;
+                text-align: left;
+                width: 210px;
+                margin-left: 30px;
+            }
 
         }
 
@@ -89,9 +82,37 @@
             font-style: normal;
             line-height: 1.88;
             letter-spacing: normal;
-            text-align: center;
-            
+        }
+
+        & li {
+            list-style-type: none;
         }
     }
+
+    & .copyright_container {
+        text-align: center;
+        padding-top: 30px;
+        text-transform: lowercase;
+        font-family: $fontStyle2;
+        font-size: 16px;
+        font-weight: normal;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.88;
+        letter-spacing: normal;
+
+
+        @include forTablet {
+            padding-top: 0px;
+            order: 1;
+            text-align: left;
+            margin-left: 39px;
+            width: 210px;
+            height: 53px;
+            font-size: 14px;
+        }
+
+    }
+
 
 }
